# amazon-bedrock-samples

./: .gitignore  404.html  CONTRIBUTING.md  README.md  example.md  guardrail_with_streaming_processing_mode.ipynb  index.html  mkdocs.yml  sitemap.xml
BedrockPromptCachingRoutingDemo/: .gitignore  LICENSE  README.md  bedrock_prompt_caching_routing.ipynb  cloudformation-template.yaml  requirements.txt
Claude/: Claude-MessagesAPI-Examples.ipynb  Claude3-Sonnet-Multimodal-Example.ipynb  README.md
Claude-Assets/: Claude-MessagesAPI-Examples.ipynb  Claude3-Sonnet-Multimodal-Example.ipynb  README.md
Claude-Messages-API/: Claude-MessagesAPI-Examples.ipynb  README.md
End to End Generative AI Solutions/: README.md
Evaluation-and-Observability/: 1. Observability-for-RAG-Applications.ipynb  2. Observability-for-Agent-Applications.ipynb  README.md  config.py  (+1 more)
cost-reporting/converse-metadata-cost-reporting/: .deploy_config  README.md  deploy.sh  generatelogs.py  package-lock.json  package.json  pyproject.toml  requirements.txt
cost-reporting/converse-metadata-cost-reporting/cdk/: app.py
cost-reporting/converse-metadata-cost-reporting/cdk/cdk/: cdk_stack.py
cost-reporting/converse-metadata-cost-reporting/cdk/glue/: bedrock_logs_schema.json  bedrock_logs_transform.py  bedrock_metadata_schema.json  bedrock_pricing_schema.json  pricing.csv
introduction-to-bedrock/bedrock-lambda-apigw-streamer/cdk/lib/resources/lambdas/bedrock-streamer/: Cargo.toml
introduction-to-bedrock/bedrock-lambda-apigw-streamer/cdk/lib/resources/lambdas/bedrock-streamer/src/: main.rs
(+2962 files in other folders)
