[project]
name = "bedrock-cost-reporting"
version = "1.0.0"
description = "AWS CDK solution for analyzing Amazon Bedrock usage costs"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.180.0",
    "constructs>=10.0.0,<11.0.0",
    "boto3>=1.36",
    "cdk-nag>=2.36.44"
]

[tool.hatch.build.targets.wheel]
packages = []

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
